--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "snazzy": "^5.0.0",
     "uglify-js": "^2.6.2"
   },
-  "dependencies": {
+  "peerDependencies": {
     "vectory": "^1.1.0"
   },
   "babel": {
