--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "dist"
   ],
   "main": "dist/renderium.js",
+  "dependencies": {
+    "left-pad": "^1.1.3"
+  },
+  "peerDependencies": {
+    "vectory": "^1.1.0"
+  },
   "devDependencies": {
     "babel-preset-es2015-loose-rollup": "^7.0.0",
     "rollup": "^0.36.4",
@@ -35,9 +41,6 @@
     "rollup-plugin-node-resolve": "^2.0.0",
     "snazzy": "^5.0.0",
     "uglify-js": "^2.6.2"
-  },
-  "peerDependencies": {
-    "vectory": "^1.1.0"
   },
   "babel": {
     "presets": [
