--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rollup-plugin-babel": "^2.6.1",
     "rollup-plugin-commonjs": "^7.0.0",
     "rollup-plugin-node-resolve": "^2.0.0",
+    "rollup-plugin-string": "^2.0.2",
     "snazzy": "^6.0.0",
     "uglify-js": "^2.6.2"
   },
