--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   ],
   "main": "dist/renderium.js",
   "dependencies": {
+    "array-equal": "^1.0.0",
     "left-pad": "^1.1.3"
   },
   "peerDependencies": {
