--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "module": "dist/renderium.js",
   "dependencies": {
     "array-equal": "1.0.0",
+    "fast-memoize": "^2.2.8",
     "left-pad": "1.1.3"
   },
   "peerDependencies": {
